 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent" tools:context="com.emperia.isurup.vendingmachine.BluetoothDataManager">
     <!--HCI Issue: Internationalization-->
     <!-- Issue: This system is difficult to translate to another language because string is hardcoded in ui elements.-->
     <!--Solution : UI strings were move to resources/ string xml to alove easy translation by accessing all strings through a single file.-->
     <!---->
     <!--HCI Issue: Design Implecation-->
     <!--Issue: This system should be easy handle by children and elder people. buttons, text and some other UI components are hard to recognize and handle.-->
     <!--Solution: Provide relatively large buttons and place text on solid background.-->
     <!--provide image to understand the system outputs-->
     <!---->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prepareDrinkQuestion"
            android:id="@+id/textView2"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:textColor="#000000"
            android:gravity="center"
            android:layout_alignParentStart="true" />

        <Button
            android:layout_width="350dp"
            android:layout_height="45dp"
            android:text="@string/pepareDrink"
            android:id="@+id/button2"
            android:layout_marginTop="30dp"
            android:background="#f1179e"
            android:textColor="#000000"
            android:gravity="center"
            android:layout_below="@+id/textView2"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            android:layout_width="350dp"
            android:layout_height="45dp"
            android:text="@string/cancel"
            android:id="@+id/button3"
            android:background="#8c86e0"
            android:textColor="#000000"
            android:gravity="center"
            android:layout_marginTop="15dp"
            android:layout_below="@+id/button2"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            android:layout_width="350dp"
            android:layout_height="45dp"
            android:text="@string/disconnect"
            android:id="@+id/button4"
            android:background="#919191"
            android:textColor="#000000"
            android:gravity="center"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lumn"
            android:layout_alignTop="@+id/textView2"
            android:layout_toRightOf="@+id/button4"
            android:textColor="#000000"
            android:gravity="center"
            android:layout_marginLeft="6dp"
            android:layout_marginStart="6dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            />

         <TextView
             android:id="@+id/result"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="#000000"
             android:layout_marginBottom="22dp"
             android:text="@string/textview"
             android:gravity="center"
             android:layout_above="@+id/button4"
             android:layout_centerHorizontal="true" />

     <ImageView
         android:id="@+id/imageView2"
         android:layout_width="300dp"
         android:layout_height="400dp"
         android:layout_below="@+id/button3"
         android:layout_marginTop="4dp"
         android:layout_marginBottom="100dp"
         android:src="@drawable/prepare"
         android:gravity="center"
         android:layout_toStartOf="@+id/result"
         android:layout_alignEnd="@+id/button3" />
 </RelativeLayout>
